# flight-price-tracker

./: .gitignore  README.md  config.ini  docker-compose.yml  pyproject.toml
api/: rest_api.py  test.py
db/: db.py
price_fetcher/: amadeus.py  amadeus_api.py  main.py  notifier.py  stats.py
